--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,11 +3,13 @@ version: '3.7'
 services:
   frontend:
     restart: always
-    image: asuzas/docker-m347-frontend:v0.0.5
+    build: 
+        context: frontend
     container_name: docker-m347-frontend
     env_file: .env
     depends_on:
-      - backend
+      - backenduser
+      - backendblog
     ports:
       - 8000:80
       - 8001:443
@@ -15,12 +17,28 @@ services:
       kompose.image-pull-policy: "Always"
       kompose.service.type: "NodePort"
       kompose.service.nodeport.port: "30081"
-  backend:
+  backendblog:
     restart: always
-    image: asuzas/docker-m347-backend:v0.0.5
-    container_name: docker-m347-backend
+    build:
+     context: backend
+    container_name: docker-m347-backend-blog
     ports:
       - 8080:8080
+    environment:
+      - DB_HOST=db
+    depends_on:
+      - db
+    labels:
+      kompose.image-pull-policy: "Always"
+      kompose.service.type: "NodePort"
+      kompose.service.nodeport.port: "30080"
+  backenduser:
+    restart: always
+    build:
+     context: backend
+    container_name: docker-m347-backend-user
+    ports:
+      - 8081:8080
     environment:
       - DB_HOST=db
     depends_on:
@@ -33,10 +51,13 @@ services:
   db:
     restart: always
     image: 'postgres:10-alpine'
-    container_name: db_m347_Bollin
+    container_name: db_m347_JaSchLuSch
     expose:
     - 5432
     environment:
       POSTGRES_PASSWORD: 'postgres'
       POSTGRES_USER: 'postgres'
       POSTGRES_DB: 'postgres'
+  
+
+
