--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,4 @@
 REACT_APP_BASEURL=http://localhost:8080/
+REACT_APP_BASEURL2=http://localhost:8081/
 REACT_APP_LANGUAGE=de
 SKIP_PREFLIGHT_CHECK=true
