--- a/frontend/docker-compose.yml
+++ b/frontend/docker-compose.yml
@@ -2,40 +2,37 @@ version: '3.7'
 
 services:
   frontend:
-    restart: always
-    image: asuzas/docker-m347-frontend:v0.0.5
-    container_name: docker-m347-frontend
+    mem_limit: 128m
+    cpus: 0.1
+
+    restart: unless-stopped
+    image: ukfrontend
+    container_name: frontend
     env_file: .env
     depends_on:
       - backend
     ports:
-      - 8000:80
-      - 8001:443
-    labels:
-      kompose.image-pull-policy: "Always"
-      kompose.service.type: "NodePort"
-      kompose.service.nodeport.port: "30081"
+      - 8094:80
   backend:
-    restart: always
-    image: asuzas/docker-m347-backend:v0.0.5
-    container_name: docker-m347-backend
+    mem_limit: 512M
+    cpus: 0.3
+
+    restart: unless-stopped
+    image: ukbackend
+    container_name: backend
     ports:
-      - 8080:8080
+      - 8009:8080
     environment:
       - DB_HOST=db
     depends_on:
       - db
-    labels:
-      kompose.image-pull-policy: "Always"
-      kompose.service.type: "NodePort"
-      kompose.service.nodeport.port: "30080"
-
   db:
-    restart: always
+    mem_limit: 128m
+    cpus: 0.05
+
+    restart: unless-stopped
     image: 'postgres:10-alpine'
-    container_name: db_m347_Bollin
-    expose:
-    - 5432
+    container_name: db
     environment:
       POSTGRES_PASSWORD: 'postgres'
       POSTGRES_USER: 'postgres'
