--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -1,10 +1,12 @@
 {
   "compilerOptions": {
     "target": "es5",
+    "types": ["cypress","node"],
     "lib": [
       "dom",
       "dom.iterable",
-      "esnext"
+      "esnext",
+      "es5",
     ],
     "allowJs": true,
     "skipLibCheck": true,
@@ -21,6 +23,6 @@
     "jsx": "react-jsx"
   },
   "include": [
-    "src"
+    "**/*.ts"
   ]
 }
