--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,7 @@ version: '3.7'
 services:
   frontend:
     restart: always
-    build: 
-        context: frontend
+    image: janschefer/jsls347
     container_name: docker-m347-frontend
     env_file: .env
     depends_on:
@@ -12,15 +11,13 @@ services:
       - backendblog
     ports:
       - 8000:80
-      - 8001:443
     labels:
       kompose.image-pull-policy: "Always"
       kompose.service.type: "NodePort"
       kompose.service.nodeport.port: "30081"
   backendblog:
     restart: always
-    build:
-     context: backend
+    image: janschefer/jsls347backend
     container_name: docker-m347-backend-blog
     ports:
       - 8080:8080
@@ -34,10 +31,11 @@ services:
       kompose.service.nodeport.port: "30080"
   backenduser:
     restart: always
-    build:
-     context: backend
+    image: janschefer/jsls347backend
     container_name: docker-m347-backend-user
     ports:
+
+
       - 8081:8080
     environment:
       - DB_HOST=db
